package com.distrital.cinedistrito;

import com.distrital.cinedistrito.Services.SalaService;
import org.springframework.boot.SpringApplication;
import org.springframework.boot.autoconfigure.SpringBootApplication;

@SpringBootApplication
public class CinedistritoApplication {

	public static void main(String[] args) {
		SpringApplication.run(CinedistritoApplication.class, args);
	}
}
